# ICP-VUT-BIT-2017-2018

./: Makefile  README.md  README.txt
examples/: obsah_kruhu.bsf  obsah_trojuhelniku.bsf  obvod_obdelniku.bsf  prepona.bsf  protilehla_strana.bsf
src/: CMakeLists.txt  Doxyfile  app.pro  qt.conf
src/app/: app.pro  main.cpp  mainwindow.cpp  mainwindow.h
src/app/core/: base.h  block.cpp  block.h  blockmanager.cpp  blockmanager.h  data.cpp  data.h  evaluator.cpp  evaluator.h  exceptions.cpp  exceptions.h  factoriable.h  factorybase.h  factorybase.tpp  identified.cpp  identified.h  join.cpp  join.h  schemeio.cpp  schemeio.h  typeblock.cpp  typeblock.h  typedata.cpp  typedata.h
src/app/core/blocks/: addblock.cpp  addblock.h  blockport.cpp  blockport.h  blockportvalue.cpp  blockportvalue.h  blocks.h  cosblock.cpp  cosblock.h  mulblock.cpp  mulblock.h  sinblock.cpp  sinblock.h  subblock.cpp  subblock.h  vectinitblock.cpp  vectinitblock.h  vectmagblock.cpp  vectmagblock.h
src/app/ui/: blockportvalueview.cpp  blockportvalueview.h  blockportview.cpp  blockportview.h  blockview.cpp  blockview.h  joinview.cpp  joinview.h  portregister.cpp  portregister.h  portview.cpp  portview.h  resources.qrc
src/app/ui/container/: blockcanvas.cpp  blockcanvas.h  blocksselection.cpp  blocksselection.h  scrollarea.cpp  scrollarea.h  toolbar.cpp  toolbar.h
src/app/ui/control/: clickable.cpp  clickable.h  iconbutton.cpp  iconbutton.h  plaintext.cpp  plaintext.h  scrollbar.cpp  scrollbar.h  textbutton.cpp  textbutton.h  textedit.cpp  textedit.h  texteditwithfixedtext.cpp  texteditwithfixedtext.h
src/app/ui/view/: warningpopup.cpp  warningpopup.h
src/app/ui/window/: graphicsview.cpp  graphicsview.h
